[gd_scene load_steps=8 format=1]

[ext_resource path="res://Players/MainPlayer/Player.gd" type="Script" id=1]
[ext_resource path="res://Players/MainPlayer/BattleBrain/AttackMachine.gd" type="Script" id=2]
[ext_resource path="res://Players/MainPlayer/BattleBrain/AttackStates/DetectEnemy.gd" type="Script" id=3]
[ext_resource path="res://Players/MainPlayer/BattleBrain/AttackStates/AttackTarget.gd" type="Script" id=4]
[ext_resource path="res://Players/MainPlayer/player.tex" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 14.9922, 29.9058 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 38.5985

[node name="Player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="BattleBrain" type="Node" parent="."]

[node name="DamageMachine" type="Node" parent="BattleBrain"]

[node name="Vulnerable" type="Node" parent="BattleBrain/DamageMachine"]

[node name="Invulnerable" type="Node" parent="BattleBrain/DamageMachine"]

[node name="AttackMachine" type="Node" parent="BattleBrain"]

script/script = ExtResource( 2 )

[node name="Disabled" type="Node" parent="BattleBrain/AttackMachine"]

[node name="DetectEnemy" type="Node" parent="BattleBrain/AttackMachine"]

script/script = ExtResource( 3 )

[node name="AttackTarget" type="Node" parent="BattleBrain/AttackMachine"]

script/script = ExtResource( 4 )

[node name="TakingDamage" type="Node" parent="BattleBrain/AttackMachine"]

[node name="CounterMachine" type="Node" parent="BattleBrain"]

[node name="Idle" type="Node" parent="BattleBrain/CounterMachine"]

[node name="SenseAttack" type="Node" parent="BattleBrain/CounterMachine"]

[node name="Counter" type="Node" parent="BattleBrain/CounterMachine"]

[node name="EnemyDetection" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 0.345203, 0, 28.872 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Area" type="CollisionShape2D" parent="EnemyDetection"]

transform/pos = Vector2( 0, 28.872 )
transform/scale = Vector2( 1, 0.345203 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="Animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="DebugPanels" type="Control" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 51.0
margin/top = 2.0
margin/right = 11.0
margin/bottom = -38.0

[node name="DamageStates" type="Label" parent="DebugPanels"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -29.0
margin/top = 6.0
margin/right = 17.0
margin/bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DmgSt:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="DebugPanels/DamageStates"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 0.0
margin/right = 139.0
margin/bottom = 14.0

[node name="DebugText" type="Label" parent="DebugPanels/DamageStates"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 48.0
margin/top = 0.0
margin/right = 139.0
margin/bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AttackStates" type="Label" parent="DebugPanels"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -23.0
margin/top = 17.0
margin/right = 14.0
margin/bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AtkSt:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="DebugPanels/AttackStates"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 39.0
margin/top = -1.0
margin/right = 130.0
margin/bottom = 13.0

[node name="DebugText" type="Label" parent="DebugPanels/AttackStates"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 39.0
margin/top = -1.0
margin/right = 129.0
margin/bottom = 13.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CounterStates" type="Label" parent="DebugPanels"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -23.0
margin/top = 27.0
margin/right = 14.0
margin/bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CntSt:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="DebugPanels/CounterStates"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 39.0
margin/top = -1.0
margin/right = 130.0
margin/bottom = 13.0

[node name="DebugText" type="Label" parent="DebugPanels/CounterStates"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 39.0
margin/top = -1.0
margin/right = 130.0
margin/bottom = 13.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


